--- a/src/Maklarresurs/AdminBundle/Resources/views/Address/new.html.twig
+++ b/src/Maklarresurs/AdminBundle/Resources/views/Address/new.html.twig
@@ -31,26 +31,40 @@
                     </div>
                     <div class="widget-content nopadding">
 
-                        {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
-                        <div class="form-group">
-                            <label class="control-label">Select District</label>
-                            <div class="controls">
-                                {{ form_widget(form.area) }}
+                        <form class="form-horizontal" method="post" action="{{ path('address_create') }}">
+                            <div class="form-group">
+                                <label class="control-label">Select Zone</label>
+                                <div class="controls">
+                                    <select name="zone" id="zone" required="">
+                                        <option></option>
+                                        {% for entity in entities if entity.depth==1%}
+                                            <option value="{{ entity.id }}">{{ entity.name }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label">Type address</label>
-                            <div class="controls">
-                                {{ form_widget(form.name, {'attr': {'class': 'form-control input-sm'}}) }}
+                            <div class="form-group">
+                                <label class="control-label">Select District</label>
+                                <div class="controls">
+                                    <select name="district" id="district" class="district" required="">
+                                        <option></option>
+                                    </select>
+                                </div>
                             </div>
-                        </div>
+                            <div class="form-group">
+                                <label class="control-label">Type address</label>
+                                <div class="controls">
+                                    <input id="gadres" type="text" name="address" placeholder="Type address from gogle" class="form-control input-sm"/>
+                                    {#<input type="text" name="address" required="" class="form-control input-sm">#}
+                                </div>
+                            </div>
 
-                        <div class="form-actions">
-                            <input type="submit" value="CREATE" class="btn btn-primary">
-                        </div>
+                            <div class="form-actions">
+                                <input type="submit" value="CREATE" class="btn btn-primary">
+                            </div>
 
 
-                        {{ form_end(form) }}
+                        </form>
                     </div>
                 </div>
             </div>
@@ -73,6 +87,61 @@
     <script src="{{ asset('bundles/maklarresursadmin/js/unicorn.js') }}"></script>
     <script src="{{ asset('bundles/maklarresursadmin/js/jquery.validate.js') }}"></script>
     <script src="{{ asset('bundles/maklarresursadmin/js/unicorn.form_validation.js') }}"></script>
+
+
+    <script type='text/javascript'>
+        $(document).ready(function() {
+            $("#zone").change(function(){
+                var zone = $("#zone").val();
+                $.ajax({
+                    type: "POST",
+                    url: "{{ path('get_districts') }}",
+                    data:"zone[]="+zone,
+                    dataType: "json",
+                    success: function(jsonData){
+                        $('select#district').empty();
+                        $("select#district").val('');
+                        $(jsonData).each(function (index, item) {
+                            var $option = $("<option/>").attr("value", item.id).text(item.name);
+                            $("select#district").append($option);
+                        });
+
+                    }
+                });
+            });
+
+        });
+
+    </script>
+
+
+
+
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&libraries=places"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            var placeSearch, autocomplete;
+            var componentForm = {
+                street_number: 'short_name',
+                route: 'long_name',
+                locality: 'long_name',
+                administrative_area_level_1: 'short_name',
+                country: 'long_name',
+                postal_code: 'short_name'
+            };
+
+            $("input#gadres").keyup(function(){
+                var input = document.getElementById('gadres');
+//                var country = $("#yettic_user_profile_country").val();
+                var options = {componentRestrictions: {country: 'SE'}};
+
+                new google.maps.places.Autocomplete(input, options);
+            });
+
+
+        });
+    </script>
+
 
 
 {% endblock %}
