--- a/src/Maklarresurs/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Maklarresurs/AdminBundle/Resources/views/layout.html.twig
@@ -29,7 +29,7 @@
                 <a href="#"><i class="icon-beaker"></i> <span>Address Management</span> <i class="arrow icon-chevron-right"></i></a>
                 <ul>
                     <li><a href="{{ path('address') }}">View addresses</a></li>
-                    <li><a href="{{ path('address_create') }}">Create Address</a></li>
+                    <li><a href="{{ path('address_new') }}">Create Address</a></li>
                 </ul>
             </li>
             <li class="submenu">
