--- a/src/Maklarresurs/UserBundle/Resources/views/Sample/confirmed.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/Sample/confirmed.html.twig
@@ -18,9 +18,8 @@
 {% block body %}
     <div id="content">
         <div id="content-header">
-            <h1>Dashboard</h1>
+            <h1>Your order has been confirmed. Thank you. </h1>
         </div>
-
     </div>
 {% endblock %}
 
