--- a/src/Maklarresurs/UserBundle/Resources/views/email/orderCreated.email.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/email/orderCreated.email.twig
@@ -2,14 +2,16 @@
 
 {% block subject %}
     {% autoescape false %}
-    {{ 'Hahahhahaha' }}
+    {{ 'New Order - Maklarresurs' }}
     {% endautoescape %}
 {% endblock %}
 
 {% block body_text %}
     {% autoescape false %}
-    Hello Patrick,
-        Its Shimul, How are you? :p
+
+        Hi! You have a new order, please login on your panel.
+
+        Thank you!
 
     {% endautoescape %}
 {%endblock%}
