--- a/src/Maklarresurs/UserBundle/Resources/views/layout.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/layout.html.twig
@@ -29,7 +29,7 @@
                 <a href="#"><i class="icon-beaker"></i> <span>LAPPNING</span> <i class="arrow icon-chevron-right"></i></a>
                 <ul>
                     <li><a href="#">View Orders</a></li>
-                    <li><a href="{{ path('user_zones') }}">Create Order</a></li>
+                    <li><a href="{{ path('sample_order') }}">Create Order</a></li>
                 </ul>
             </li>
             <li class="submenu">
