--- a/src/Maklarresurs/UserBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/Dashboard/index.html.twig
@@ -21,6 +21,15 @@
             <h1>Dashboard</h1>
         </div>
 
+        <div style="width: 700px; height: 300px; margin: 0 auto; position:relative; padding-top: 80px;">
+            <div style="float: left; width: 250px; height: 150px; background-color: #2D335B; text-align: center; border-radius: 10px; padding: 40px;">
+                <a href="{{ path('sample_order') }}"><b style="color: white; font-size: 20px;">Skapa Manuell Order Utan Karta</b></a>
+            </div>
+            <div style="float: right; width: 250px; height: 150px; background-color: #2D335B; text-align: center; border-radius: 10px; padding: 40px;">
+                <a href="#"><b style="color: white; font-size: 20px;">Skapa Order med hjalp ap karta</b></a>
+            </div>
+        </div>
+
     </div>
 {% endblock %}
 
