--- a/src/Maklarresurs/UserBundle/Resources/views/layout.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/layout.html.twig
@@ -24,13 +24,10 @@
 
     <div id="sidebar">
         <ul>
-            <li class="active"><a href="#"><i class="icon-home"></i> <span>Dashboard</span></a></li>
-            <li class="submenu">
-                <a href="#"><i class="icon-beaker"></i> <span>LAPPNING</span> <i class="arrow icon-chevron-right"></i></a>
-                <ul>
-                    <li><a href="#">View Orders</a></li>
-                    <li><a href="{{ path('sample_order') }}">Create Order</a></li>
-                </ul>
+            <li class="active"><a href="{{ path('sample_order') }}"><i class="icon-home"></i> <span>Dashboard</span></a></li>
+            <li >
+                <a href="{{ path('sample_order') }}"><i class="icon-beaker"></i> <span>LAPPNING</span> <i class="arrow icon-chevron-right"></i></a>
+
             </li>
             <li class="submenu">
                 <a href="#"><i class="icon-beaker"></i> <span>BOKA-VISNINGSVARD</span> <i class="arrow icon-chevron-right"></i></a>
